<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.base.login.HomePageFragment"
    android:orientation="vertical">

    <include
        android:id="@+id/loaderInclude"
        layout="@layout/loader" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="200dp"
        android:id="@+id/etEmail"
        android:hint="@string/email"
        android:layout_gravity="center_horizontal"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tvForgotPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnLogin"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnRegister"/>

</LinearLayout>