<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.base.register.RegisterFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFillInfo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/fill_your_information"
        android:textSize="30sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="@string/full_name"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="@string/username"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="@string/mail"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="@string/password_"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFullName"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLastName"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnRegister"/>

</androidx.appcompat.widget.LinearLayoutCompat>