<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    android:orientation="vertical"
    tools:context=".presentation.screen.quiz_type.ChooseQuizTypeFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/blue"
        android:src="@drawable/ic_person" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/quiz_type_header"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuestionsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/number_of_questions"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/black">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_number_of_questions"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/select_category"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/black">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_category"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/select_difficulty"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/black">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_difficulty"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/select_type"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="@color/black">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/ac_type"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@color/blue"
        android:text="@string/start_quiz"
        android:textAllCaps="false"
        android:textColor="@color/peach"
        android:textSize="25sp" />

</androidx.appcompat.widget.LinearLayoutCompat>