<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.profile.UserProfileFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_information"
        android:textSize="35sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="@string/username"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTotalScore"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="@string/total_score"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/Username"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="Kninca"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/TotalScore"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="30"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--<androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="Change Password"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnLogin"/>-->

</androidx.appcompat.widget.LinearLayoutCompat>